less gradient mixing z-index fix

--- a/templates/less/mixins.less
+++ b/templates/less/mixins.less
@@ -10,6 +10,7 @@
 .gradient-hover-mixin(@bg-1, @bg-2, @deg: 90deg) {
 
        background: transparent;
+       z-index:1;
 
        &:after,
        &:before {
